use celestrium's refactored DataProvider interface

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
   </head>
 
-  <body></body>
+  <body>
+    <div id="controls" style="position:fixed;">
+      <div id="distro"></div>
+      <div id="sliders"></div>
+    </div>
+  </body>
 
 </html>
