--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <html>
-
   <head>
+
+    <!-- load celestrium dependencies -->
+    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="js/underscore-min.js"></script>
+    <script type="text/javascript" src="js/backbone-min.js"></script>
+    <script type="text/javascript" src="js/d3.min.js"></script>
 
     <!-- load celestrium -->
     <script type="text/javascript" src="js/celestrium.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/celestrium.css">
 
-    <!-- load code in this repo -->
+    <!-- load main script -->
     <script type="text/javascript" src="js/main.js"></script>
 
   </head>
